last major refactors, travs_dev

--- a/examples/user_guide/GeneSet_Comparison.ipynb
+++ b/examples/user_guide/GeneSet_Comparison.ipynb
@@ -2425,7 +2425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2434,7 +2434,7 @@
     "\n",
     "for collection in [\"Boruta_Treatment\", \"deseq2_treatment\"]:\n",
     "    \n",
-    "    counts, treatment = gsf.get_data(combined_gsc, selected_gene_sets=[collection], annotation_variables=\"Treatment\")\n",
+    "    counts, treatment = gsf.get_gem_data(combined_gsc, selected_gene_sets=[collection], annotation_variables=\"Treatment\")\n",
     "    \n",
     "    x_train, x_test, y_train, y_test = model_selection.train_test_split(counts, treatment)\n",
     "    \n",
@@ -2457,12 +2457,22 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# gsf.get_gem_data(combined_gsc, annotation_variables=\"Treatment\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_train, x_test, y_train, y_test = gsf.utils.wrappers.analytics.train_test_split_wrapper(combined_gsc, \n",
-    "      annotation_variables=[\"Treatment\"])\n",
+    "counts, treatment = gsf.get_gem_data(combined_gsc, annotation_variables=\"Treatment\")\n",
+    "\n",
+    "x_train, x_test, y_train, y_test = model_selection.train_test_split(counts, treatment)\n",
     "\n",
     "rf_cls_model = RandomForestClassifier(\n",
     "    class_weight='balanced',\n",
@@ -2476,18 +2486,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'Boruta_Treatment': 0.8991596638655462,\n",
-       " 'deseq2_treatment': 0.7899159663865546,\n",
-       " 'complete': 0.865546218487395}"
+       "{'Boruta_Treatment': 0.8487394957983193,\n",
+       " 'deseq2_treatment': 0.8319327731092437}"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2498,26 +2507,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.holoviews_exec.v0+json": "",
       "text/html": [
-       "<div id='1110' style='display: table; margin: 0 auto;'>\n",
+       "<div id='1003' style='display: table; margin: 0 auto;'>\n",
        "\n",
        "\n",
        "\n",
        "\n",
        "\n",
-       "  <div class=\"bk-root\" id=\"e8d4280c-714c-49ff-8ff9-e15d2ac9244a\" data-root-id=\"1110\"></div>\n",
+       "  <div class=\"bk-root\" id=\"fb635ec9-71bb-4c78-9ad9-277960a87116\" data-root-id=\"1003\"></div>\n",
        "</div>\n",
        "<script type=\"application/javascript\">(function(root) {\n",
        "  function embed_document(root) {\n",
        "    \n",
-       "  var docs_json = {\"d407c80f-da67-4b26-870d-df3b7595076a\":{\"roots\":{\"references\":[{\"attributes\":{\"below\":[{\"id\":\"1119\",\"type\":\"LinearAxis\"}],\"center\":[{\"id\":\"1123\",\"type\":\"Grid\"},{\"id\":\"1127\",\"type\":\"Grid\"}],\"left\":[{\"id\":\"1124\",\"type\":\"CategoricalAxis\"}],\"margin\":null,\"min_border_bottom\":10,\"min_border_left\":10,\"min_border_right\":10,\"min_border_top\":10,\"plot_height\":300,\"renderers\":[{\"id\":\"1145\",\"type\":\"GlyphRenderer\"}],\"sizing_mode\":\"fixed\",\"title\":{\"id\":\"1111\",\"type\":\"Title\"},\"toolbar\":{\"id\":\"1133\",\"type\":\"Toolbar\"},\"x_range\":{\"id\":\"1108\",\"type\":\"Range1d\"},\"x_scale\":{\"id\":\"1115\",\"type\":\"LinearScale\"},\"y_range\":{\"id\":\"1109\",\"type\":\"FactorRange\"},\"y_scale\":{\"id\":\"1117\",\"type\":\"CategoricalScale\"}},\"id\":\"1110\",\"subtype\":\"Figure\",\"type\":\"Plot\"},{\"attributes\":{},\"id\":\"1129\",\"type\":\"PanTool\"},{\"attributes\":{},\"id\":\"1130\",\"type\":\"WheelZoomTool\"},{\"attributes\":{\"callback\":null,\"data\":{\"Gene_Selection_Group\":[\"Boruta_Treatment\",\"complete\",\"deseq2_treatment\"],\"y\":{\"__ndarray__\":\"ferFfOrF7D/8jbL7jbLrP9n9Rtn9Ruk/\",\"dtype\":\"float64\",\"shape\":[3]}},\"selected\":{\"id\":\"1140\",\"type\":\"Selection\"},\"selection_policy\":{\"id\":\"1156\",\"type\":\"UnionRenderers\"}},\"id\":\"1139\",\"type\":\"ColumnDataSource\"},{\"attributes\":{\"active_drag\":\"auto\",\"active_inspect\":\"auto\",\"active_multi\":null,\"active_scroll\":\"auto\",\"active_tap\":\"auto\",\"tools\":[{\"id\":\"1128\",\"type\":\"SaveTool\"},{\"id\":\"1129\",\"type\":\"PanTool\"},{\"id\":\"1130\",\"type\":\"WheelZoomTool\"},{\"id\":\"1131\",\"type\":\"BoxZoomTool\"},{\"id\":\"1132\",\"type\":\"ResetTool\"}]},\"id\":\"1133\",\"type\":\"Toolbar\"},{\"attributes\":{},\"id\":\"1128\",\"type\":\"SaveTool\"},{\"attributes\":{},\"id\":\"1120\",\"type\":\"BasicTicker\"},{\"attributes\":{},\"id\":\"1156\",\"type\":\"UnionRenderers\"},{\"attributes\":{\"callback\":null,\"end\":1.1,\"reset_end\":1.1,\"reset_start\":0,\"tags\":[[[\"y\",\"y\",null]]]},\"id\":\"1108\",\"type\":\"Range1d\"},{\"attributes\":{\"bottom_units\":\"screen\",\"fill_alpha\":{\"value\":0.5},\"fill_color\":{\"value\":\"lightgrey\"},\"left_units\":\"screen\",\"level\":\"overlay\",\"line_alpha\":{\"value\":1.0},\"line_color\":{\"value\":\"black\"},\"line_dash\":[4,4],\"line_width\":{\"value\":2},\"render_mode\":\"css\",\"right_units\":\"screen\",\"top_units\":\"screen\"},\"id\":\"1158\",\"type\":\"BoxAnnotation\"},{\"attributes\":{},\"id\":\"1117\",\"type\":\"CategoricalScale\"},{\"attributes\":{\"callback\":null,\"factors\":[\"Boruta_Treatment\",\"complete\",\"deseq2_treatment\"],\"tags\":[[[\"Gene Selection Group\",\"Gene Selection Group\",null]]]},\"id\":\"1109\",\"type\":\"FactorRange\"},{\"attributes\":{\"text\":\"\",\"text_color\":{\"value\":\"black\"},\"text_font_size\":{\"value\":\"12pt\"}},\"id\":\"1111\",\"type\":\"Title\"},{\"attributes\":{},\"id\":\"1115\",\"type\":\"LinearScale\"},{\"attributes\":{\"fill_alpha\":{\"value\":0.2},\"fill_color\":{\"value\":\"#30a2da\"},\"height\":{\"value\":0.8},\"line_alpha\":{\"value\":0.2},\"line_color\":{\"value\":\"black\"},\"right\":{\"field\":\"y\"},\"y\":{\"field\":\"Gene_Selection_Group\"}},\"id\":\"1144\",\"type\":\"HBar\"},{\"attributes\":{},\"id\":\"1147\",\"type\":\"BasicTickFormatter\"},{\"attributes\":{\"grid_line_color\":null,\"ticker\":{\"id\":\"1120\",\"type\":\"BasicTicker\"}},\"id\":\"1123\",\"type\":\"Grid\"},{\"attributes\":{\"dimension\":1,\"grid_line_color\":null,\"ticker\":{\"id\":\"1125\",\"type\":\"CategoricalTicker\"}},\"id\":\"1127\",\"type\":\"Grid\"},{\"attributes\":{\"data_source\":{\"id\":\"1139\",\"type\":\"ColumnDataSource\"},\"glyph\":{\"id\":\"1142\",\"type\":\"HBar\"},\"hover_glyph\":null,\"muted_glyph\":{\"id\":\"1144\",\"type\":\"HBar\"},\"nonselection_glyph\":{\"id\":\"1143\",\"type\":\"HBar\"},\"selection_glyph\":null,\"view\":{\"id\":\"1146\",\"type\":\"CDSView\"}},\"id\":\"1145\",\"type\":\"GlyphRenderer\"},{\"attributes\":{\"source\":{\"id\":\"1139\",\"type\":\"ColumnDataSource\"}},\"id\":\"1146\",\"type\":\"CDSView\"},{\"attributes\":{},\"id\":\"1125\",\"type\":\"CategoricalTicker\"},{\"attributes\":{},\"id\":\"1150\",\"type\":\"CategoricalTickFormatter\"},{\"attributes\":{\"fill_color\":{\"value\":\"#30a2da\"},\"height\":{\"value\":0.8},\"right\":{\"field\":\"y\"},\"y\":{\"field\":\"Gene_Selection_Group\"}},\"id\":\"1142\",\"type\":\"HBar\"},{\"attributes\":{\"fill_alpha\":{\"value\":0.1},\"fill_color\":{\"value\":\"#30a2da\"},\"height\":{\"value\":0.8},\"line_alpha\":{\"value\":0.1},\"line_color\":{\"value\":\"black\"},\"right\":{\"field\":\"y\"},\"y\":{\"field\":\"Gene_Selection_Group\"}},\"id\":\"1143\",\"type\":\"HBar\"},{\"attributes\":{},\"id\":\"1140\",\"type\":\"Selection\"},{\"attributes\":{\"overlay\":{\"id\":\"1158\",\"type\":\"BoxAnnotation\"}},\"id\":\"1131\",\"type\":\"BoxZoomTool\"},{\"attributes\":{\"axis_label\":\"Gene Selection Group\",\"bounds\":\"auto\",\"formatter\":{\"id\":\"1150\",\"type\":\"CategoricalTickFormatter\"},\"major_label_orientation\":\"horizontal\",\"ticker\":{\"id\":\"1125\",\"type\":\"CategoricalTicker\"}},\"id\":\"1124\",\"type\":\"CategoricalAxis\"},{\"attributes\":{},\"id\":\"1132\",\"type\":\"ResetTool\"},{\"attributes\":{\"axis_label\":\"y\",\"bounds\":\"auto\",\"formatter\":{\"id\":\"1147\",\"type\":\"BasicTickFormatter\"},\"major_label_orientation\":1.5707963267948966,\"ticker\":{\"id\":\"1120\",\"type\":\"BasicTicker\"}},\"id\":\"1119\",\"type\":\"LinearAxis\"}],\"root_ids\":[\"1110\"]},\"title\":\"Bokeh Application\",\"version\":\"1.3.4\"}};\n",
-       "  var render_items = [{\"docid\":\"d407c80f-da67-4b26-870d-df3b7595076a\",\"roots\":{\"1110\":\"e8d4280c-714c-49ff-8ff9-e15d2ac9244a\"}}];\n",
+       "  var docs_json = {\"2036838f-07cc-4601-aa32-354e62b8692d\":{\"roots\":{\"references\":[{\"attributes\":{\"align\":null,\"below\":[{\"id\":\"1012\",\"type\":\"LinearAxis\"}],\"center\":[{\"id\":\"1016\",\"type\":\"Grid\"},{\"id\":\"1020\",\"type\":\"Grid\"}],\"left\":[{\"id\":\"1017\",\"type\":\"CategoricalAxis\"}],\"margin\":null,\"min_border_bottom\":10,\"min_border_left\":10,\"min_border_right\":10,\"min_border_top\":10,\"plot_height\":300,\"renderers\":[{\"id\":\"1038\",\"type\":\"GlyphRenderer\"}],\"sizing_mode\":\"fixed\",\"title\":{\"id\":\"1004\",\"type\":\"Title\"},\"toolbar\":{\"id\":\"1026\",\"type\":\"Toolbar\"},\"x_range\":{\"id\":\"1001\",\"type\":\"Range1d\"},\"x_scale\":{\"id\":\"1008\",\"type\":\"LinearScale\"},\"y_range\":{\"id\":\"1002\",\"type\":\"FactorRange\"},\"y_scale\":{\"id\":\"1010\",\"type\":\"CategoricalScale\"}},\"id\":\"1003\",\"subtype\":\"Figure\",\"type\":\"Plot\"},{\"attributes\":{\"fill_color\":{\"value\":\"#30a2da\"},\"height\":{\"value\":0.8},\"right\":{\"field\":\"y\"},\"y\":{\"field\":\"Gene_Selection_Group\"}},\"id\":\"1035\",\"type\":\"HBar\"},{\"attributes\":{},\"id\":\"1025\",\"type\":\"ResetTool\"},{\"attributes\":{},\"id\":\"1013\",\"type\":\"BasicTicker\"},{\"attributes\":{},\"id\":\"1040\",\"type\":\"BasicTickFormatter\"},{\"attributes\":{},\"id\":\"1023\",\"type\":\"WheelZoomTool\"},{\"attributes\":{\"data_source\":{\"id\":\"1032\",\"type\":\"ColumnDataSource\"},\"glyph\":{\"id\":\"1035\",\"type\":\"HBar\"},\"hover_glyph\":null,\"muted_glyph\":{\"id\":\"1037\",\"type\":\"HBar\"},\"nonselection_glyph\":{\"id\":\"1036\",\"type\":\"HBar\"},\"selection_glyph\":null,\"view\":{\"id\":\"1039\",\"type\":\"CDSView\"}},\"id\":\"1038\",\"type\":\"GlyphRenderer\"},{\"attributes\":{\"fill_alpha\":{\"value\":0.2},\"fill_color\":{\"value\":\"#30a2da\"},\"height\":{\"value\":0.8},\"line_alpha\":{\"value\":0.2},\"line_color\":{\"value\":\"black\"},\"right\":{\"field\":\"y\"},\"y\":{\"field\":\"Gene_Selection_Group\"}},\"id\":\"1037\",\"type\":\"HBar\"},{\"attributes\":{\"active_drag\":\"auto\",\"active_inspect\":\"auto\",\"active_multi\":null,\"active_scroll\":\"auto\",\"active_tap\":\"auto\",\"tools\":[{\"id\":\"1021\",\"type\":\"SaveTool\"},{\"id\":\"1022\",\"type\":\"PanTool\"},{\"id\":\"1023\",\"type\":\"WheelZoomTool\"},{\"id\":\"1024\",\"type\":\"BoxZoomTool\"},{\"id\":\"1025\",\"type\":\"ResetTool\"}]},\"id\":\"1026\",\"type\":\"Toolbar\"},{\"attributes\":{\"axis_label\":\"y\",\"bounds\":\"auto\",\"formatter\":{\"id\":\"1040\",\"type\":\"BasicTickFormatter\"},\"major_label_orientation\":1.5707963267948966,\"ticker\":{\"id\":\"1013\",\"type\":\"BasicTicker\"}},\"id\":\"1012\",\"type\":\"LinearAxis\"},{\"attributes\":{},\"id\":\"1050\",\"type\":\"UnionRenderers\"},{\"attributes\":{},\"id\":\"1008\",\"type\":\"LinearScale\"},{\"attributes\":{\"source\":{\"id\":\"1032\",\"type\":\"ColumnDataSource\"}},\"id\":\"1039\",\"type\":\"CDSView\"},{\"attributes\":{},\"id\":\"1021\",\"type\":\"SaveTool\"},{\"attributes\":{\"callback\":null,\"end\":1.1,\"reset_end\":1.1,\"reset_start\":0,\"tags\":[[[\"y\",\"y\",null]]]},\"id\":\"1001\",\"type\":\"Range1d\"},{\"attributes\":{\"bottom_units\":\"screen\",\"fill_alpha\":{\"value\":0.5},\"fill_color\":{\"value\":\"lightgrey\"},\"left_units\":\"screen\",\"level\":\"overlay\",\"line_alpha\":{\"value\":1.0},\"line_color\":{\"value\":\"black\"},\"line_dash\":[4,4],\"line_width\":{\"value\":2},\"render_mode\":\"css\",\"right_units\":\"screen\",\"top_units\":\"screen\"},\"id\":\"1049\",\"type\":\"BoxAnnotation\"},{\"attributes\":{\"dimension\":1,\"grid_line_color\":null,\"ticker\":{\"id\":\"1018\",\"type\":\"CategoricalTicker\"}},\"id\":\"1020\",\"type\":\"Grid\"},{\"attributes\":{\"callback\":null,\"factors\":[\"Boruta_Treatment\",\"deseq2_treatment\"],\"tags\":[[[\"Gene Selection Group\",\"Gene Selection Group\",null]]]},\"id\":\"1002\",\"type\":\"FactorRange\"},{\"attributes\":{\"grid_line_color\":null,\"ticker\":{\"id\":\"1013\",\"type\":\"BasicTicker\"}},\"id\":\"1016\",\"type\":\"Grid\"},{\"attributes\":{},\"id\":\"1010\",\"type\":\"CategoricalScale\"},{\"attributes\":{},\"id\":\"1018\",\"type\":\"CategoricalTicker\"},{\"attributes\":{\"fill_alpha\":{\"value\":0.1},\"fill_color\":{\"value\":\"#30a2da\"},\"height\":{\"value\":0.8},\"line_alpha\":{\"value\":0.1},\"line_color\":{\"value\":\"black\"},\"right\":{\"field\":\"y\"},\"y\":{\"field\":\"Gene_Selection_Group\"}},\"id\":\"1036\",\"type\":\"HBar\"},{\"attributes\":{\"axis_label\":\"Gene Selection Group\",\"bounds\":\"auto\",\"formatter\":{\"id\":\"1043\",\"type\":\"CategoricalTickFormatter\"},\"major_label_orientation\":\"horizontal\",\"ticker\":{\"id\":\"1018\",\"type\":\"CategoricalTicker\"}},\"id\":\"1017\",\"type\":\"CategoricalAxis\"},{\"attributes\":{},\"id\":\"1043\",\"type\":\"CategoricalTickFormatter\"},{\"attributes\":{},\"id\":\"1022\",\"type\":\"PanTool\"},{\"attributes\":{\"overlay\":{\"id\":\"1049\",\"type\":\"BoxAnnotation\"}},\"id\":\"1024\",\"type\":\"BoxZoomTool\"},{\"attributes\":{},\"id\":\"1033\",\"type\":\"Selection\"},{\"attributes\":{\"callback\":null,\"data\":{\"Gene_Selection_Group\":[\"Boruta_Treatment\",\"deseq2_treatment\"],\"y\":{\"__ndarray__\":\"u98ou98o6z97MZ96MZ/qPw==\",\"dtype\":\"float64\",\"shape\":[2]}},\"selected\":{\"id\":\"1033\",\"type\":\"Selection\"},\"selection_policy\":{\"id\":\"1050\",\"type\":\"UnionRenderers\"}},\"id\":\"1032\",\"type\":\"ColumnDataSource\"},{\"attributes\":{\"text\":\"\",\"text_color\":{\"value\":\"black\"},\"text_font_size\":{\"value\":\"12pt\"}},\"id\":\"1004\",\"type\":\"Title\"}],\"root_ids\":[\"1003\"]},\"title\":\"Bokeh Application\",\"version\":\"1.4.0\"}};\n",
+       "  var render_items = [{\"docid\":\"2036838f-07cc-4601-aa32-354e62b8692d\",\"roots\":{\"1003\":\"fb635ec9-71bb-4c78-9ad9-277960a87116\"}}];\n",
        "  root.Bokeh.embed.embed_items_notebook(docs_json, render_items);\n",
        "\n",
        "  }\n",
@@ -2527,13 +2536,14 @@
        "    var attempts = 0;\n",
        "    var timer = setInterval(function(root) {\n",
        "      if (root.Bokeh !== undefined) {\n",
+       "        clearInterval(timer);\n",
        "        embed_document(root);\n",
-       "        clearInterval(timer);\n",
-       "      }\n",
-       "      attempts++;\n",
-       "      if (attempts > 100) {\n",
-       "        console.log(\"Bokeh: ERROR: Unable to run BokehJS code because BokehJS library is missing\");\n",
-       "        clearInterval(timer);\n",
+       "      } else {\n",
+       "        attempts++;\n",
+       "        if (attempts > 100) {\n",
+       "          clearInterval(timer);\n",
+       "          console.log(\"Bokeh: ERROR: Unable to run BokehJS code because BokehJS library is missing\");\n",
+       "        }\n",
        "      }\n",
        "    }, 10, root)\n",
        "  }\n",
@@ -2543,10 +2553,10 @@
        ":Bars   [Gene Selection Group]   (y)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {
       "application/vnd.holoviews_exec.v0+json": {
-       "id": "1110"
+       "id": "1003"
       }
      },
      "output_type": "execute_result"
