gallery and doc updates

--- a/examples/Development.ipynb
+++ b/examples/Development.ipynb
@@ -21,7 +21,6 @@
     "    + Workflow images.\n",
     "    \n",
     "The above repositories and websites are all kept up-to-date using travis ci.\n",
-    "    \n",
     "\n",
     "### Travis CI\n",
     "\n",
@@ -93,7 +92,24 @@
     "\n",
     "### Maintaining Docker Images\n",
     "\n",
-    "The docker images used by `GSForge` are based on the [Jupyter Docker Stacks](https://jupyter-docker-stacks.readthedocs.io/en/latest/index.html).\n"
+    "The docker images used by `GSForge` are based on the [Jupyter Docker Stacks](https://jupyter-docker-stacks.readthedocs.io/en/latest/index.html).\n",
+    "\n",
+    "\n",
+    "\n",
+    "### Developing Documentation\n",
+    "\n",
+    "> ...***if the documentation is not good enough, people will not use it.***\n",
+    "\n",
+    "When writing a piece of documentation, consider the categorical purpose:\n",
+    "\n",
+    "+ Tutorial -- learning-oriented, a introductory combination of a 'how-to' and 'explanation'.\n",
+    "+ How-to Guide -- goal-oriented.\n",
+    "+ Explanation -- understanding-oriented.\n",
+    "+ Reference -- information-oriented.\n",
+    "\n",
+    "\n",
+    "**References:**  \n",
+    "+ [Documentation, Procida](https://www.divio.com/blog/documentation/)\n"
    ]
   }
  ],
