fixed name, travis_dev

--- a/examples/panel_gallery/UMAP_Panels_and_views.ipynb
+++ b/examples/panel_gallery/UMAP_Panels_and_views.ipynb
@@ -2539,7 +2539,7 @@
     }
    ],
    "source": [
-    "gsf.panels.UMAP_Panel(gsc, hue=\"Treatment\").panel().app()"
+    "# gsf.panels.UMAP_Panel(gsc, hue=\"Treatment\").panel().app()"
    ]
   },
   {
