updated plot notebooks

--- a/examples/user_guide/DGE_Result_Analysis.ipynb
+++ b/examples/user_guide/DGE_Result_Analysis.ipynb
@@ -2381,20 +2381,12 @@
     }
    ],
    "source": [
-    "import pathlib\n",
     "import os\n",
-    "import pprint\n",
-    "import functools\n",
+    "import pathlib\n",
     "\n",
-    "import numpy as np\n",
-    "import xarray as xr\n",
-    "import pandas as pd\n",
-    "import patsy\n",
-    "\n",
-    "# import upsetplot\n",
     "import holoviews as hv\n",
+    "import numpy as np\n",
     "hv.extension(\"bokeh\", \"matplotlib\")\n",
-    "%matplotlib inline\n",
     "\n",
     "import GSForge as gsf"
    ]
@@ -2404,9 +2396,7 @@
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "import inspect"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -3050,6 +3040,15 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.1"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
