updated dev docs, testing tags

--- a/examples/Development.ipynb
+++ b/examples/Development.ipynb
@@ -26,6 +26,25 @@
     "\n",
     "Travis integration is setup through the `.travis.yml` file.\n",
     "\n",
+    "By default travis will only run on tagged builds, or those with \"travis_dev\" within their commit message.\n",
+    "\n",
+    "To tag a commit:\n",
+    "\n",
+    "```bash\n",
+    "git tag -a v1.4 -m \"my version 1.4\"\n",
+    "```\n",
+    "\n",
+    "Development tags are recognized by the regex: `^v(\\d+|\\.)+[a-z]+\\d+$`  \n",
+    "Examples include `v1.2rc4`.\n",
+    "\n",
+    "Release tags are recognized by the regex: `^v(\\d+|\\.)+[^a-z]\\d+$`  \n",
+    "Examples include `v1.2`.\n",
+    "\n",
+    "Tags are not pushed by default.\n",
+    "\n",
+    "```bash\n",
+    "git push origin <tag-name>\n",
+    "```\n",
     "\n",
     "### Generating the Documentation\n",
     "\n",
