messed up tagging

--- a/examples/Development.ipynb
+++ b/examples/Development.ipynb
@@ -34,8 +34,8 @@
     "git tag -a v1.4 -m \"my version 1.4\"\n",
     "```\n",
     "\n",
-    "Development tags are recognized by the regex: `^v(\\d+|\\.)+[a-z]+\\d+$`  \n",
-    "Examples include `v1.2rc4`.\n",
+    "Development tags are recognized by the regex: `^v(\\d+|\\.)+[a-z]+\\d*$`  \n",
+    "Examples include `v1.2rc4`, `v1.2alpha`.\n",
     "\n",
     "Release tags are recognized by the regex: `^v(\\d+|\\.)+[^a-z]\\d+$`  \n",
     "Examples include `v1.2`.\n",
