experimenting with xarray acessors

--- a/examples/Development.ipynb
+++ b/examples/Development.ipynb
@@ -46,6 +46,8 @@
     "git push origin <tag-name>\n",
     "```\n",
     "\n",
+    "See the [git documentation](https://git-scm.com/book/en/v2/Git-Basics-Tagging) for more on tags.\n",
+    "\n",
     "### Generating the Documentation\n",
     "\n",
     "**Prerequisites:**\n",
