updated to docs

--- a/examples/panel_gallery/UMAP_Panels_and_views.ipynb
+++ b/examples/panel_gallery/UMAP_Panels_and_views.ipynb
@@ -2414,17 +2414,8 @@
    "metadata": {},
    "source": [
     "The transform that is run can be accessed via a call to `.transform()`.\n",
-    "The output of this function is cached based on a set of the input arguments."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# umap_transform = gsf.panels.UMAP_Panel(gsc, hue=\"Treatment\", random_state=42).transform()\n",
-    "# umap_transform.shape"
+    "The output of this function is cached based on a set of the input arguments.\n",
+    "\n"
    ]
   },
   {
@@ -2493,53 +2484,8 @@
     }
    ],
    "source": [
-    "gsf.panels.UMAP_Panel(gsc, hue=\"Treatment\", random_state=42).view()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Interact via a \"Panel\"\n",
-    "\n",
-    "As there are several parameters to adjust and no trivial way to programatically interpret the results, a GUI is provided.\n",
-    "\n",
-    "The `.panel()` function creates a layout, and the call `.app()` makes this panel display within the current notebook."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.holoviews_exec.v0+json": "",
-      "text/html": [
-       "\n",
-       "<script src=\"http://localhost:35117/autoload.js?bokeh-autoload-element=1377&bokeh-absolute-url=http://localhost:35117&resources=none\" id=\"1377\"></script>"
-      ]
-     },
-     "metadata": {
-      "application/vnd.holoviews_exec.v0+json": {
-       "server_id": "4277683011024edb9229027c5297f955"
-      }
-     },
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<bokeh.server.server.Server at 0x7f23c188a110>"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# gsf.panels.UMAP_Panel(gsc, hue=\"Treatment\").panel().app()"
+    "gsf.panels.UMAP_Panel(gsc, hue=\"Treatment\", random_state=42).view()\n",
+    "\n"
    ]
   },
   {
@@ -2638,6 +2584,36 @@
   },
   {
    "cell_type": "markdown",
+   "source": [
+    "### Interact via a \"Panel\"\n",
+    "\n",
+    "As there are several parameters to adjust and no trivial way to programatically interpret the results, a GUI is provided.\n",
+    "\n",
+    "The `.panel()` function creates a layout, and the call `.app()` makes this panel display within the current notebook."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# gsf.panels.UMAP_Panel(gsc, hue=\"Treatment\").panel().servable()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "---"
@@ -2665,10 +2641,10 @@
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
+    "source": [],
     "metadata": {
      "collapsed": false
-    },
-    "source": []
+    }
    }
   }
  },
