--- a/examples/user_guide/GeneSet_Analysis.ipynb
+++ b/examples/user_guide/GeneSet_Analysis.ipynb
@@ -6,7 +6,9 @@
    "source": [
     "This notebook gives some simple examples for:\n",
     "+ Comparing GeneSets to eachother via some machine-learning model score.\n",
-    "+ Ranking genes within a geneset based on some machine-learning model."
+    "+ Ranking genes within a geneset based on some machine-learning model.\n",
+    "\n",
+    "The iterations / generations trained in this notebook are low so that the notebook executes in a reasonable amount of time."
    ]
   },
   {
