testing on travis, travis_dev

--- a/examples/Development.ipynb
+++ b/examples/Development.ipynb
@@ -60,6 +60,21 @@
     "+ [`nbsmoke`](https://github.com/pyviz-dev/nbsmoke)\n",
     "    For basic notebook checks.\n",
     " \n",
+    " **Building the docs locally:**\n",
+    "\n",
+    " ```bash\n",
+    "nbsite_generate_modules.py GSForge -d ./doc/Reference_Manual -n GSForge\n",
+    "nbsite generate-rst --org SystemsGenetics --project-name GSForge\n",
+    "nbsite build --what=html --output=builtdocs\n",
+    "```\n",
+    "\n",
+    "Then start the server:\n",
+    "\n",
+    "```bash\n",
+    "cd builtdocs && python -m http.server\n",
+    "```\n",
+    "\n",
+    "View at (localhost:8000)[localhost:8000].\n",
     "\n",
     "**Initial setup notes:**\n",
     " \n",
