fixed travis ci bug, doc updates, travis_dev

--- a/examples/how_to_galleries/core_guides/GeneSet_Analysis.ipynb
+++ b/examples/how_to_galleries/core_guides/GeneSet_Analysis.ipynb
@@ -2460,15 +2460,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 10.6 s, sys: 12.2 s, total: 22.8 s\n",
-      "Wall time: 16.8 s\n"
+      "CPU times: user 32.2 s, sys: 45.5 s, total: 1min 17s\n",
+      "Wall time: 59.3 s\n"
      ]
     }
    ],
@@ -2480,35 +2480,41 @@
     "    selected_gene_sets=[\"Boruta_Treatment\"],\n",
     "    annotation_variables=[\"Treatment\"],\n",
     "    model=gene_rank_mdl,\n",
-    "    n_iterations=1\n",
+    "    n_iterations=3\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<pre>&lt;xarray.Dataset&gt;\n",
-       "Dimensions:              (Gene: 681)\n",
+       "Dimensions:                  (Gene: 681, feature_importance_iter: 3)\n",
        "Coordinates:\n",
-       "  * Gene                 (Gene) object &#x27;LOC_Os03g11550&#x27; ... &#x27;LOC_Os10g36690&#x27;\n",
+       "  * Gene                     (Gene) object &#x27;LOC_Os03g11550&#x27; ... &#x27;LOC_Os10g36690&#x27;\n",
+       "  * feature_importance_iter  (feature_importance_iter) int64 0 1 2\n",
+       "    feature_importance_mean  (Gene) float64 0.0009208 0.0006481 ... 0.0008347\n",
+       "    feature_importance_std   (Gene) float64 0.0001202 0.0001026 ... 0.0003692\n",
        "Data variables:\n",
-       "    feature_importances  (Gene) float64 0.000996 0.00099 ... 0.001209 0.0006303</pre>"
+       "    feature_importances      (feature_importance_iter, Gene) float64 0.001078 ... 0.0006771</pre>"
       ],
       "text/plain": [
        "<xarray.Dataset>\n",
-       "Dimensions:              (Gene: 681)\n",
+       "Dimensions:                  (Gene: 681, feature_importance_iter: 3)\n",
        "Coordinates:\n",
-       "  * Gene                 (Gene) object 'LOC_Os03g11550' ... 'LOC_Os10g36690'\n",
+       "  * Gene                     (Gene) object 'LOC_Os03g11550' ... 'LOC_Os10g36690'\n",
+       "  * feature_importance_iter  (feature_importance_iter) int64 0 1 2\n",
+       "    feature_importance_mean  (Gene) float64 0.0009208 0.0006481 ... 0.0008347\n",
+       "    feature_importance_std   (Gene) float64 0.0001202 0.0001026 ... 0.0003692\n",
        "Data variables:\n",
-       "    feature_importances  (Gene) float64 0.000996 0.00099 ... 0.001209 0.0006303"
+       "    feature_importances      (feature_importance_iter, Gene) float64 0.001078 ... 0.0006771"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2526,21 +2532,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<pre>&lt;xarray.Dataset&gt;\n",
-       "Dimensions:              (Gene: 55986)\n",
+       "Dimensions:                  (Gene: 55986, feature_importance_iter: 3, mProbes_iter: 3, nFDR_iter: 3)\n",
        "Coordinates:\n",
-       "  * Gene                 (Gene) object &#x27;LOC_Os06g05820&#x27; ... &#x27;LOC_Os07g03418&#x27;\n",
+       "  * Gene                     (Gene) object &#x27;LOC_Os06g05820&#x27; ... &#x27;LOC_Os07g03418&#x27;\n",
+       "  * nFDR_iter                (nFDR_iter) int64 0 1 2\n",
+       "    nFDR_mean                (Gene) float64 nan nan nan nan ... nan nan nan\n",
+       "    nFDR_std                 (Gene) float64 nan nan nan nan ... nan nan nan\n",
+       "  * mProbes_iter             (mProbes_iter) int64 0 1 2\n",
+       "    mProbes_mean             (Gene) float64 nan nan nan nan ... 0.0 nan nan nan\n",
+       "    mProbes_std              (Gene) float64 nan nan nan nan ... 0.0 nan nan nan\n",
+       "  * feature_importance_iter  (feature_importance_iter) int64 0 1 2\n",
+       "    feature_importance_mean  (Gene) float64 nan nan nan nan ... nan nan nan\n",
+       "    feature_importance_std   (Gene) float64 nan nan nan nan ... nan nan nan\n",
        "Data variables:\n",
-       "    support              (Gene) bool False False False ... False False False\n",
-       "    support_weak         (Gene) bool False False False ... False False False\n",
-       "    ranking              (Gene) int64 10029 34446 34446 ... 34446 3373 34446\n",
-       "    feature_importances  (Gene) float64 nan nan nan nan ... nan nan nan\n",
+       "    support                  (Gene) bool False False False ... False False False\n",
+       "    support_weak             (Gene) bool False False False ... False False False\n",
+       "    ranking                  (Gene) int64 10029 34446 34446 ... 34446 3373 34446\n",
+       "    feature_importances      (feature_importance_iter, Gene) float64 nan ... nan\n",
+       "    nFDR                     (nFDR_iter, Gene) float64 nan nan nan ... nan nan\n",
+       "    mProbes NRD              (mProbes_iter, Gene) float64 nan nan ... nan nan\n",
        "Attributes:\n",
        "    boruta_model:                   {&quot;two_step&quot;: true, &quot;max_iter&quot;: 50, &quot;estim...\n",
        "    ranking_model:                  {&quot;bootstrap&quot;: true, &quot;class_weight&quot;: &quot;bala...\n",
@@ -2550,14 +2567,25 @@
       ],
       "text/plain": [
        "<xarray.Dataset>\n",
-       "Dimensions:              (Gene: 55986)\n",
+       "Dimensions:                  (Gene: 55986, feature_importance_iter: 3, mProbes_iter: 3, nFDR_iter: 3)\n",
        "Coordinates:\n",
-       "  * Gene                 (Gene) object 'LOC_Os06g05820' ... 'LOC_Os07g03418'\n",
+       "  * Gene                     (Gene) object 'LOC_Os06g05820' ... 'LOC_Os07g03418'\n",
+       "  * nFDR_iter                (nFDR_iter) int64 0 1 2\n",
+       "    nFDR_mean                (Gene) float64 nan nan nan nan ... nan nan nan\n",
+       "    nFDR_std                 (Gene) float64 nan nan nan nan ... nan nan nan\n",
+       "  * mProbes_iter             (mProbes_iter) int64 0 1 2\n",
+       "    mProbes_mean             (Gene) float64 nan nan nan nan ... 0.0 nan nan nan\n",
+       "    mProbes_std              (Gene) float64 nan nan nan nan ... 0.0 nan nan nan\n",
+       "  * feature_importance_iter  (feature_importance_iter) int64 0 1 2\n",
+       "    feature_importance_mean  (Gene) float64 nan nan nan nan ... nan nan nan\n",
+       "    feature_importance_std   (Gene) float64 nan nan nan nan ... nan nan nan\n",
        "Data variables:\n",
-       "    support              (Gene) bool False False False ... False False False\n",
-       "    support_weak         (Gene) bool False False False ... False False False\n",
-       "    ranking              (Gene) int64 10029 34446 34446 ... 34446 3373 34446\n",
-       "    feature_importances  (Gene) float64 nan nan nan nan ... nan nan nan\n",
+       "    support                  (Gene) bool False False False ... False False False\n",
+       "    support_weak             (Gene) bool False False False ... False False False\n",
+       "    ranking                  (Gene) int64 10029 34446 34446 ... 34446 3373 34446\n",
+       "    feature_importances      (feature_importance_iter, Gene) float64 nan ... nan\n",
+       "    nFDR                     (nFDR_iter, Gene) float64 nan nan nan ... nan nan\n",
+       "    mProbes NRD              (mProbes_iter, Gene) float64 nan nan ... nan nan\n",
        "Attributes:\n",
        "    boruta_model:                   {\"two_step\": true, \"max_iter\": 50, \"estim...\n",
        "    ranking_model:                  {\"bootstrap\": true, \"class_weight\": \"bala...\n",
@@ -2566,7 +2594,7 @@
        "    __GSForge.GeneSet.params:       {\"gene_index_name\": \"Gene\", \"name\": \"Boru..."
       ]
      },
-     "execution_count": 12,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2592,18 +2620,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 1min 4s, sys: 22.9 s, total: 1min 26s\n",
-      "Wall time: 43.9 s\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%time\n",
     "treatment_nFDR = gsf.operations.analytics.nFDR(\n",
@@ -2617,35 +2636,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<xarray.Dataset>\n",
-       "Dimensions:    (Gene: 681, nFDR_iter: 3)\n",
-       "Coordinates:\n",
-       "  * Gene       (Gene) object 'LOC_Os03g11550' ... 'LOC_Os10g36690'\n",
-       "  * nFDR_iter  (nFDR_iter) int64 0 1 2\n",
-       "    nFDR_mean  (Gene) float64 0.9481 0.979 0.006363 ... 0.8209 0.514 0.8243\n",
-       "    nFDR_std   (Gene) float64 0.02289 0.01165 0.007983 ... 0.04809 0.3655 0.2329\n",
-       "Data variables:\n",
-       "    nFDR       (nFDR_iter, Gene) float64 0.9163 0.9633 ... 0.4758 0.4949"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "treatment_nFDR"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2661,18 +2661,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 33.6 s, sys: 27.9 s, total: 1min 1s\n",
-      "Wall time: 38.9 s\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%time\n",
     "treatment_mProbes = gsf.operations.analytics.mProbes(\n",
@@ -2686,35 +2677,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<xarray.Dataset>\n",
-       "Dimensions:       (Gene: 681, mProbes_iter: 3)\n",
-       "Coordinates:\n",
-       "  * Gene          (Gene) object 'LOC_Os03g11550' ... 'LOC_Os10g36690'\n",
-       "  * mProbes_iter  (mProbes_iter) int64 0 1 2\n",
-       "    mProbes_mean  (Gene) float64 0.0004895 0.0004895 0.0 ... 0.0 0.0 0.0\n",
-       "    mProbes_std   (Gene) float64 0.0006922 0.0006922 0.0 ... 0.0 0.0 0.0\n",
-       "Data variables:\n",
-       "    mProbes NRD   (mProbes_iter, Gene) float64 0.001468 0.001468 0.0 ... 0.0 0.0"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "treatment_mProbes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2730,7 +2702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2740,20 +2712,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "681"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# View the list of 'supported' genes.\n",
     "len(gsc.gene_sets[\"Boruta_Treatment\"].gene_support())"
@@ -2768,45 +2729,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<xarray.Dataset>\n",
-       "Dimensions:                  (Gene: 681, feature_importance_iter: 3, mProbes_iter: 3, nFDR_iter: 3)\n",
-       "Coordinates:\n",
-       "  * Gene                     (Gene) object 'LOC_Os03g11550' ... 'LOC_Os10g36690'\n",
-       "  * feature_importance_iter  (feature_importance_iter) int64 0 1 2\n",
-       "    feature_importance_mean  (Gene) float64 0.001046 0.0007688 ... 0.0008783\n",
-       "    feature_importance_std   (Gene) float64 0.000333 0.0001248 ... 7.171e-05\n",
-       "  * nFDR_iter                (nFDR_iter) int64 0 1 2\n",
-       "    nFDR_mean                (Gene) float64 0.9481 0.979 ... 0.514 0.8243\n",
-       "    nFDR_std                 (Gene) float64 0.02289 0.01165 ... 0.3655 0.2329\n",
-       "  * mProbes_iter             (mProbes_iter) int64 0 1 2\n",
-       "    mProbes_mean             (Gene) float64 0.0004895 0.0004895 0.0 ... 0.0 0.0\n",
-       "    mProbes_std              (Gene) float64 0.0006922 0.0006922 0.0 ... 0.0 0.0\n",
-       "Data variables:\n",
-       "    support                  (Gene) bool True True True True ... True True True\n",
-       "    support_weak             (Gene) bool False False False ... False False False\n",
-       "    ranking                  (Gene) int64 1 1 1 1 1 1 1 1 1 ... 1 1 1 1 1 1 1 1\n",
-       "    feature_importances      (feature_importance_iter, Gene) float64 0.0007384 ... 0.0008816\n",
-       "    nFDR                     (nFDR_iter, Gene) float64 0.9163 0.9633 ... 0.4949\n",
-       "    mProbes NRD              (mProbes_iter, Gene) float64 0.001468 ... 0.0\n",
-       "Attributes:\n",
-       "    boruta_model:                   {\"two_step\": true, \"max_iter\": 50, \"estim...\n",
-       "    ranking_model:                  {\"bootstrap\": true, \"class_weight\": \"bala...\n",
-       "    selected_count_variable:        counts\n",
-       "    selected_annotation_variables:  Treatment\n",
-       "    __GSForge.GeneSet.params:       {\"gene_index_name\": \"Gene\", \"name\": \"Boru..."
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "ds = gsc.gene_sets[\"Boruta_Treatment\"].data.sel(Gene=gsc.gene_sets[\"Boruta_Treatment\"].gene_support())\n",
     "ds"
