--- a/examples/how_to_galleries/core_guides/AnnotatedGEM_from_pandas.ipynb
+++ b/examples/how_to_galleries/core_guides/AnnotatedGEM_from_pandas.ipynb
@@ -965,7 +965,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (base)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -979,7 +979,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.6"
   },
   "pycharm": {
    "stem_cell": {
